# dslmodel

./: .context.md  .contextdocs.md  .cruft.json  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hook.py  .uv-migration-complete  .worktree-config.json  8020_validation_summary.md  AUTO_EVOLUTION_SUMMARY.md  CLAUDE.md  COMPLETE_8020_SUMMARY.md  COMPLETE_PROJECT_STRUCTURE.md  COMPREHENSIVE_E2E_DEVOPS_PROOF_COMPLETE.md  DSLMODEL-CODING-ASSISTANT-PROMPT.md  DSLMODEL_360_FORGE_COMPLETE.md  DSLMODEL_360_SUMMARY.md  DSLModel_80_20_Implementation.md  Dockerfile  Dockerfile.validate  E2E_DEVOPS_ARCHITECTURE.md  E2E_DEVOPS_COMPLETE_PROOF.md  E2E_DEVOPS_PROOF_COMPLETE.md  E2E_VALIDATION_RESULTS.md  EVOLUTION_MERGE_ANALYSIS.md  EVOLUTION_SUMMARY.md  FORGE_360_SUMMARY.md  GIT_AUTO_DX.md  GIT_AUTO_SUMMARY.md  GIT_BRIDGE_SUMMARY.md  LLM_COORDINATION_SUMMARY.md  LLM_INTEGRATION_SUCCESS.md  MONETIZATION_DEMO_COMPLETE.md  MOVE_COMPLETION_SUMMARY.md  Makefile  OLLAMA_VALIDATION_REPORT.md  OTEL_CLI_Integration_Guide.md  OTEL_CONCURRENT_VALIDATION_COMPLETE.md  (+201 more)
.claude/commands/: claim-work.md  complete-work.md  coordination-dashboard.md  generate-report.md  infinite-coordination.md  optimize-coordination.md  sprint-planning.md  team-analysis.md  update-progress.md  work-health-check.md
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
.swarm-sh/weaver/: 5one.yaml
_templates/: README.md
audit_exports/: HIPAA_audit_trail.json  PCI-DSS_audit_trail.json  SOC2_audit_trail.json  compliance_summary.json
backlog/: BI-44929d.md  BI-eb13b0.md
context/: .commands_manifest.json  .keep  COMMAND_TESTING_RESULTS.md  README.md  autonomous-decision-engine.md  docs.md  index.md  otel.md  swarm_ecosystem.md
context/5one/: README.md
context/agent/: README.md
context/autonomous/: README.md
context/capabilities/: README.md
coordination/: agent_0.json  agent_1.json  agent_2.json  agent_coordination_state.json  completed_0.json  completed_1.json  completed_2.json  completed_3.json  telemetry_0.json  telemetry_1.json  telemetry_2.json  telemetry_3.json  telemetry_4.json  work_0.json  work_1.json  work_2.json  work_3.json  work_4.json  work_5.json  work_6.json  work_7.json  work_8.json  work_9.json
demo_forge_360_output/: permutations_index.yaml  run_all_permutations.sh
demo_generated_feature/: auto_decision.md  auto_decision.py  auto_decision_cli.py  integration.txt  test_auto_decision.py
demo_output/: 360_executive_summary.md  360_implementation_guide.md  agent_orchestration_telemetry_fixed_results.json  agent_orchestration_telemetry_results.json  e2e_360_transformation_results.json
digests/: graph_digest.md  ledger_digest.md  mermaid_digest.md
docs/: 360-permutation-testing.md  80-20-capability-upgrade.md  agent-coordination-worktrees.md  architecture-diagrams.md  autonomous-evolution.md  autonomous-operations.md  diagram-index.md  dslmodel.html  e2e-feature-generation.md  forge_360_permutations.md  hyper-decorators.md  index.html  operational-diagrams.md  search.js  subsystem-diagrams.md  swarmsh-thesis.md  system-overview-diagrams.md  telemetry-capabilities.md
docs_evolution/: evolution_a65a6def-fa4a-4c1c-88b5-1842856be8fc.json
dslmodel-slides/: package.json  pnpm-lock.yaml  slides-demo.md  slides.md
etc/: git_registry.yaml
evolution_results/: evolution_24defc02-ce70-493a-9733-4f0ee8369b70.json  evolution_6a72c74a-fcc3-4dee-a54b-aa9866005ddd.json  evolution_8a8b24a5-6aa8-45bf-b3bd-256b55ea0d31.json  evolution_b5efd7c2-2ee2-4b17-83e4-5d0c6d5d0e69.json  evolution_ba280f5f-4b03-46fa-99df-f920e5d82da5.json  evolution_e5a8772e-ec30-4d72-b09a-c52576256a47.json  evolution_fa05c203-68c5-4fd7-97d0-366a007b4a24.json
examples/: weaver_forge_360_demo.py
forge_360_demo/: permutations_index.yaml  run_all_permutations.sh
full_cycle_data/: report_full_cycle_1750943036.json
generated_improvements/: improvement_1_20250626_102525.json  improvement_1_20250626_102915.json  improvement_1_20250626_103040.json  improvement_2_20250626_102525.json  improvement_2_20250626_103040.json  improvement_2_20250626_103112.json  improvement_2_20250626_103122.json  improvement_3_20250626_103040.json
nuxtbe/: .prettierrc  dslmodel.js  hello.js  hello.py  nuxt.config.ts  package.json  pnpm-lock.yaml  pydantic.js  pydantic_v2.js  user_model.py
otel_workspace/: docker-compose.yml  example_app.py
output/: debug.txt
project_visualizations/: api_surface_diagram.mmd  architecture_diagram.mmd  data_flow_diagram.mmd  dependencies_diagram.mmd  feature_map_diagram.mmd  index.html  project_analysis.json  timeline_diagram.mmd
redteam_reports/: redteam_report_redteam_20250627_142540_04f68e1a.md
rust_test/: Cargo.toml
sales_materials/: compliance_pitch.txt  cto_bypass_pitch.txt  executive_summary.json  promptops_pitch.txt
scripts/: commit_e2e_features.sh  setup_worktree_e2e.sh
security_assessment/: adversarial_tests_20250627_142411.json  pentest_results_20250627_142411.json
semantic_conventions/: agent_worktree_coordination.yaml  dslmodel_core.yaml  evolution.yaml  registry_manifest.yaml  worktree_pipeline.yaml
semconv_layers/: base_layer.yaml  claude_code_application.yaml  dslmodel_complete_ecosystem.yaml  file_domain.yaml  git_agent_operations.yaml  validation_rules.yaml  web_domain.yaml
semconv_registry/: claude_code_tools.yaml  claude_code_tools_v2.yaml  claude_manifest.yaml  dslmodel.yaml  dslmodel_360.yaml  evolution-system-conventions.yaml  evolution_system.yaml  pqc_global.yaml  registry_manifest.yaml
swarm_data/: agents.json  telemetry.json  work_queue.json
tests/: CLI_TEST_PATTERNS.md  __init__.py  conftest.py  test_agent_systems.py  test_api.py  test_autonomous_evolution_health.py  test_cli.py  test_cli_essential.py  test_core_components.py  test_e2e.py  test_import.py  test_organizational_transformation.py  test_otel_validation.py  test_roadmap_0.py  test_telemetry_system.py  test_weaver_fsm_integration.py  test_weaver_otel_integration.py  test_weaver_system.py
weaver/: git_registry.yaml
weaver_templates/: transformation.yaml
(+1507 files in other folders)
